--- a/renderer/style.css
+++ b/renderer/style.css
@@ -5,3 +5,15 @@ body {
 .bold {
   font-weight : bold;
 }
+
+.shadow {
+  /* background: #ffff; Цвет фона */
+  /*box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  padding: 10px;*/
+
+  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1); */
+
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+ }
