Improvements for the Home panel

--- a/renderer/style.css
+++ b/renderer/style.css
@@ -17,3 +17,19 @@ body {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
  }
+
+ .ispro {
+  color: #6C1635;
+ }
+
+ .afina {
+  color: #F26725;
+ }
+
+ .parus {
+   color: #004B7A;
+ }
+
+ .C1 {
+   color: #ED1C24;
+ }
