--- a/renderer/style.css
+++ b/renderer/style.css
@@ -33,3 +33,9 @@ body {
  .C1 {
    color: #ED1C24;
  }
+
+  /* make image black and white */ 
+  /* -webkit-filter: grayscale(60%);*/
+.black-white {  
+    filter: grayscale(20%);  
+}
